# cmake_template

./: CMakeLists.txt  README.md  test_main.cpp
src/a/: A.cpp  CMakeLists.txt  main_a.cpp
src/a/include/: A.h
src/a/src/: A.cpp
src/b/: B.cpp  CMakeLists.txt  main_b.cpp
src/b/include/: B.h
src/b/src/: B.cpp
src/c/: C.cpp  C.h  CMakeLists.txt  main_c.cpp
src/c/include/: C.h
src/c/src/: C.cpp
